# OCEAN

./: .gitignore  README.md
BuildScripts/: build_and_install.sh  build_workspace.sh  install_app.sh  sudo_if_needed.sh  term_styles.sh
ChartTest1/ChartTest1.xcodeproj/: project.pbxproj
FCTD Data Display_with_winch_data/FCTD Data Display/: ContentView.swift
FCTD Data Display_with_winch_data/FCTD Data Display.xcodeproj/: project.pbxproj
ModrawAcq/: Setup  utilities.c  utilities.h
ModrawAcq/fctd_epsi/: ctd.c  fctd_epsi.c  main.c
ModrawAcq/test/: ModrawFilter.py  TestHarness.py
ModrawAcq/utilities/: pthread_utils.c
ModrawLib/: Package.swift
ModrawLib/src/: ByteArrayReader.swift  MatArrayFlagsSubelement.swift  MatDataElementTag.swift  MatFile.swift  MatHeader.swift  MatNamespaceParser.swift  MatParser.swift  ModrawHeader.swift  ModrawPacket.swift  ModrawParser.swift
ModrawServer/: ModrawClient.py  ModrawFilter.py  ModrawServer.py  ModrawServerSim.py  ModrawSync.py  NetworkExp.py  WinchUdpServer.py  client.py  server.py  tcp_client.py  udp_client.py
ModrawSim/: build.sh
ModrawSim/ModrawSim/: CLI.swift  main.swift  (+1 more)
ModrawSim/ModrawSim.xcodeproj/: project.pbxproj
ModrawSim/ModrawSim.xcworkspace/: contents.xcworkspacedata
ModrawVis/: Info.plist  build.sh  build_to_sci.sh
SikuliaqScripts/: ParseAndUpload.py  ParserLib.py
SikuliaqScripts/2026/: GoogleApiAuthLib.py  NmeaOverUdpLib.py  pyproject.toml
SikuliaqScripts2025/: download_currents.sh
epsiPlot_realtime/: .gitignore  FCTD-EPSI-Realtime-Plot-Info.plist  build_to_sci.sh
fctd_epsi_acq/: Setup
(+183 files in other folders)
